--- a/experience.html
+++ b/experience.html
@@ -15,6 +15,7 @@
             <a href="index.html">About</a>
             <a href="experience.html">Experience</a>
             <a href="projects.html">Projects</a>
+            <a href="blogs.html">Blogs</a>
             <a href="gallery.html">Gallery</a>
             <a href="contact.html">Contact</a>
         </nav>
