Add FinGraphRAG blog post to blogs section

--- a/blogs.html
+++ b/blogs.html
@@ -98,6 +98,22 @@
                             </div>
                         </div>
 
+                        <div class="project-card blog-card-style">
+                            <div class="project-icon">📊</div>
+                            <h3>FinGraphRAG: Portfolio Risk & Market Analysis</h3>
+                            <p class="blog-date">Published: January 2026</p>
+                            <p>Built a GraphRAG system for portfolio risk and market analysis, leveraging graph-based retrieval to analyze financial data and provide insights.</p>
+                            <div class="project-tech">
+                                <span class="tech-pill">GraphRAG</span>
+                                <span class="tech-pill">RAG</span>
+                                <span class="tech-pill">Finance</span>
+                                <span class="tech-pill">Python</span>
+                            </div>
+                            <div style="display: flex; flex-direction: row; gap: 1rem; margin-top: 0.75rem; flex-wrap: wrap;">
+                                <a href="https://medium.com/@saakshigupta2002/fingraphrag-building-a-portfolio-risk-market-analysis-graphrag-0a8dc2c8b00a" target="_blank" class="blog-read-btn" onclick="event.stopPropagation();">Read on Medium →</a>
+                            </div>
+                        </div>
+
                         <!-- Add more blog posts here -->
                     </div>
             </section>
