Add FinGraphRAG project as first project with images and links

--- a/index.html
+++ b/index.html
@@ -314,6 +314,24 @@
                 </div>
                 
                 <div class="projects-grid">
+                    <div class="project-card" id="fingraphrag-preview"
+                        data-full-description="FinGraphRAG is a comprehensive GraphRAG (Graph Retrieval-Augmented Generation) system designed for financial research and portfolio risk analysis. The platform combines vector search (Qdrant) for semantic retrieval over SEC filings and news chunks with knowledge graph reasoning (Neo4j) to provide explainable portfolio insights. The system features a full-stack architecture with FastAPI backend and React frontend, orchestrated via Docker Compose. Key capabilities include portfolio knowledge graph construction, hybrid retrieval (vector + graph expansion), risk analysis with sector exposure calculations, event impact reasoning, and structured responses with citations. The platform demonstrates how graph-enhanced RAG can provide more contextual and explainable insights compared to traditional vector-only retrieval systems."
+                        data-github-link="https://github.com/saakshigupta2002/FinGraphRAG"
+                        data-demo-link="https://drive.google.com/file/d/1J7pt18-pmo7MHeatee_-Yj0uMt64915p/view?usp=sharing"
+                        data-images="images/project/knowledge_graph.png,images/project/Portfolio_Holdings_Graph.png">
+                        <div class="project-icon">📊</div>
+                        <h3>FinGraphRAG <span class="project-company">Portfolio Risk & Market Analysis</span></h3>
+                        <p>A comprehensive GraphRAG system for portfolio risk and market analysis, combining vector search with knowledge graph reasoning to provide explainable financial insights.</p>
+                        <div class="project-tech">
+                            <span class="tech-pill">GraphRAG</span>
+                            <span class="tech-pill">Neo4j</span>
+                            <span class="tech-pill">Qdrant</span>
+                            <span class="tech-pill">FastAPI</span>
+                            <span class="tech-pill">React</span>
+                            <span class="tech-pill">Python</span>
+                        </div>
+                    </div>
+
                     <div class="project-card" id="futurevest-preview"
                         data-full-description="FutureVest is a web-based stock analysis platform that helps investors value stocks and discover growth opportunities across thousands of U.S. equities. It provides stock search, screening, watchlists, price alerts, technical analysis, and valuation tools. The platform uses a microservices architecture with containerized services deployed on AWS, enabling scalability and maintainability. Built with React/TypeScript frontend and Flask backend, deployed on AWS ECS Fargate with RDS PostgreSQL, featuring Docker containerization, JWT authentication, and Nginx reverse proxy for scalable, cloud-native architecture. Developed as part of CSSE6400 group project at UQ."
                         data-demo-link="https://www.youtube.com/watch?v=dNfTGW1w-aw"
