Change FinGraphRAG demo button to Output

--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
                         data-full-description="FinGraphRAG is a comprehensive GraphRAG (Graph Retrieval-Augmented Generation) system designed for financial research and portfolio risk analysis. The platform combines vector search (Qdrant) for semantic retrieval over SEC filings and news chunks with knowledge graph reasoning (Neo4j) to provide explainable portfolio insights. The system features a full-stack architecture with FastAPI backend and React frontend, orchestrated via Docker Compose. Key capabilities include portfolio knowledge graph construction, hybrid retrieval (vector + graph expansion), risk analysis with sector exposure calculations, event impact reasoning, and structured responses with citations. The platform demonstrates how graph-enhanced RAG can provide more contextual and explainable insights compared to traditional vector-only retrieval systems."
                         data-github-link="https://github.com/saakshigupta2002/FinGraphRAG"
                         data-demo-link="https://drive.google.com/file/d/1J7pt18-pmo7MHeatee_-Yj0uMt64915p/view?usp=sharing"
+                        data-link-label="Output"
                         data-images="images/project/knowledge_graph.png,images/project/Portfolio_Holdings_Graph.png">
                         <div class="project-icon">📊</div>
                         <h3>FinGraphRAG <span class="project-company">Portfolio Risk & Market Analysis</span></h3>
