Add Medium and Substack links to contact page

--- a/contact.html
+++ b/contact.html
@@ -98,6 +98,14 @@
                                     <img src="images/icons/linkedin-icon.png" alt="Linkedin">
                                     <span>LinkedIn</span>
                                 </a>
+                                <a href="https://medium.com/@saakshigupta2002" target="_blank" class="contact-button pulse">
+                                    <span style="font-size: 1.2rem;">📝</span>
+                                    <span>Medium</span>
+                                </a>
+                                <a href="https://substack.com/@saakshigupta2002" target="_blank" class="contact-button pulse">
+                                    <span style="font-size: 1.2rem;">📰</span>
+                                    <span>Substack</span>
+                                </a>
                                 <a href="https://leetcode.com/u/saakshigupta/" target="_blank" class="contact-button pulse">
                                     <span style="font-size: 1.2rem;">💻</span>
                                     <span>LeetCode</span>
