--- a/gallery.html
+++ b/gallery.html
@@ -63,18 +63,16 @@
                     <div class="gallery-container">
                         <!-- Graduation & Achievements -->
                         <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/UQ_Graduation_with_mom.jpeg" alt="UQ Graduation with Mom" data-caption="UQ Graduation Day with Mom" data-full-src="images/gallery/UQ_Graduation_with_mom.jpeg" style="cursor: pointer;">
+                            <img src="images/gallery/UQ_Graduation_with_mom.jpeg" alt="UQ Graduation Day" data-caption="UQ Graduation Day" data-full-src="images/gallery/UQ_Graduation_with_mom.jpeg" style="cursor: pointer;">
                             <div class="gallery-overlay">
                                 <h3>Graduation Day</h3>
-                                <p>With Mom</p>
                             </div>
                         </div>
 
                         <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/UQ_Graduation_with_friends.jpeg" alt="UQ Graduation with Friends" data-caption="UQ Graduation with Friends">
+                            <img src="images/gallery/UQ_Graduation_with_friends.jpeg" alt="UQ Graduation" data-caption="UQ Graduation">
                             <div class="gallery-overlay">
                                 <h3>Graduation</h3>
-                                <p>With Friends</p>
                             </div>
                         </div>
 
