--- a/index.html
+++ b/index.html
@@ -442,10 +442,9 @@
                         </div>
 
                         <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/UQ_Graduation_with_friends.jpeg" alt="UQ Graduation with Friends" data-caption="UQ Graduation with Friends" data-full-src="images/gallery/UQ_Graduation_with_friends.jpeg" style="cursor: pointer;">
+                            <img src="images/gallery/UQ_Graduation_with_friends.jpeg" alt="UQ Graduation" data-caption="UQ Graduation" data-full-src="images/gallery/UQ_Graduation_with_friends.jpeg" style="cursor: pointer;">
                             <div class="gallery-overlay">
                                 <h3>Graduation</h3>
-                                <p>With Friends</p>
                             </div>
                         </div>
 
