update education and gallery

--- a/experience.html
+++ b/experience.html
@@ -173,7 +173,7 @@
                         <div class="timeline-marker"></div>
                         <div class="timeline-content">
                             <div class="timeline-header">
-                                <h3><span class="company-name">University of Queensland</span> Bachelor's Degree in Software Engineering</h3>
+                                <h3><span class="company-name">University of Queensland</span> Bachelor's Degree in Software Engineering (Honours)</h3>
                                 <div class="timeline-meta">
                                     <span class="timeline-location">Brisbane, AU</span>
                                     <span class="timeline-duration">Graduated(2025)</span>
@@ -184,6 +184,10 @@
                                 <span class="tag">Software Engineering</span>
                                 <span class="tag">Data Science</span>
                                 <span class="tag">Scholarship</span>
+                            </div>
+                            <div style="display: flex; gap: 1rem; margin-top: 0.75rem; flex-wrap: wrap;">
+                                <a href="https://drive.google.com/file/d/1WT5XmmJEjyOxM-_NOAEKyG8XOzmzKkTd/view?usp=sharing" target="_blank" class="timeline-link">Thesis →</a>
+                                <a href="https://drive.google.com/file/d/1vGpSY0bdEe3KsgWcb2rI8CghWbolbZI4/view?usp=sharing" target="_blank" class="timeline-link">Thesis Poster →</a>
                             </div>
                             <p style="margin-top: 1rem; font-style: italic; color: var(--text-secondary);"><em>I learned a lot, but the real learning happens in the code editor!</em></p>
                         </div>
