--- a/gallery.html
+++ b/gallery.html
@@ -61,6 +61,14 @@
                 
                 <div class="content-card fade-in">
                     <div class="gallery-container">
+                        <!-- NVIDIA Tour -->
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/nvidia_tour.jpeg" alt="NVIDIA Tour" data-caption="NVIDIA Tour" data-full-src="images/gallery/nvidia_tour.jpeg" style="cursor: pointer;">
+                            <div class="gallery-overlay">
+                                <h3>NVIDIA Tour</h3>
+                            </div>
+                        </div>
+
                         <!-- Graduation & Achievements -->
                         <div class="gallery-item zoom-hover">
                             <img src="images/gallery/UQ_Graduation_with_mom.jpeg" alt="UQ Graduation Day" data-caption="UQ Graduation Day" data-full-src="images/gallery/UQ_Graduation_with_mom.jpeg" style="cursor: pointer;">
