--- a/index.html
+++ b/index.html
@@ -426,6 +426,13 @@
                 <div class="content-card fade-in">
                     <div class="gallery-container" style="grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));">
                         <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/nvidia_tour.jpeg" alt="NVIDIA Tour" data-caption="NVIDIA Tour" data-full-src="images/gallery/nvidia_tour.jpeg" style="cursor: pointer;">
+                            <div class="gallery-overlay">
+                                <h3>NVIDIA Tour</h3>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
                             <img src="images/gallery/golden_gate_visit.jpeg" alt="Golden Gate Visit" data-caption="Visiting the Golden Gate" data-full-src="images/gallery/golden_gate_visit.jpeg" style="cursor: pointer;">
                             <div class="gallery-overlay">
                                 <h3>Golden Gate Visit</h3>
