--- a/experience.html
+++ b/experience.html
@@ -133,6 +133,7 @@
                                 <span class="tag">Data Analysis</span>
                                 <span class="tag">Energy</span>
                             </div>
+                            <a href="https://www.linkedin.com/posts/uq-gas-energy_research-science-energy-activity-7307557979602489344-2bA7?utm_source=share&utm_medium=member_desktop&rcm=ACoAACL2nf4BvRDvm7Qj0LO6Msr8AsVDUoSNIqI" target="_blank" class="timeline-link">UQ Post →</a>
                         </div>
                     </div>
 
@@ -153,6 +154,7 @@
                                 <span class="tag">Explainable AI</span>
                                 <span class="tag">CLIP</span>
                             </div>
+                            <a href="https://www.linkedin.com/posts/uq-gas-energy_uq-student-research-activity-7225998947239018497-ovSK?utm_source=share&utm_medium=member_desktop&rcm=ACoAACL2nf4BvRDvm7Qj0LO6Msr8AsVDUoSNIqI" target="_blank" class="timeline-link">UQ Post →</a>
                         </div>
                     </div>
                 </div>
