--- a/experience.html
+++ b/experience.html
@@ -133,7 +133,11 @@
                                 <span class="tag">Data Analysis</span>
                                 <span class="tag">Energy</span>
                             </div>
-                            <a href="https://www.linkedin.com/posts/uq-gas-energy_research-science-energy-activity-7307557979602489344-2bA7?utm_source=share&utm_medium=member_desktop&rcm=ACoAACL2nf4BvRDvm7Qj0LO6Msr8AsVDUoSNIqI" target="_blank" class="timeline-link">UQ Post →</a>
+                            <div style="display: flex; gap: 1rem; margin-top: 0.75rem; flex-wrap: wrap;">
+                                <a href="https://www.linkedin.com/posts/uq-gas-energy_research-science-energy-activity-7307557979602489344-2bA7?utm_source=share&utm_medium=member_desktop&rcm=ACoAACL2nf4BvRDvm7Qj0LO6Msr8AsVDUoSNIqI" target="_blank" class="timeline-link">UQ Post →</a>
+                                <a href="https://www.linkedin.com/posts/uq-gas-energy_uq-research-students-activity-7300299706134368256-StRV?utm_source=share&utm_medium=member_desktop&rcm=ACoAACL2nf4BvRDvm7Qj0LO6Msr8AsVDUoSNIqI" target="_blank" class="timeline-link">UQ Post →</a>
+                                <a href="https://www.linkedin.com/posts/uq-gas-energy_uq-research-study-activity-7284716923748077568-TURg?utm_source=share&utm_medium=member_desktop&rcm=ACoAACL2nf4BvRDvm7Qj0LO6Msr8AsVDUoSNIqI" target="_blank" class="timeline-link">UQ Post →</a>
+                            </div>
                         </div>
                     </div>
 
